# phoenix-eco-monorepo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BANDIT_SECURITY_AUDIT_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DATA_FLYWHEEL_SETUP_GUIDE.md  DEPENDENCIES_AUDIT_REPORT.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VALIDATION_REPORT.md  DEPLOY_TRIGGER.txt  Dockerfile  EXECUTION_PRODUCTION_GUIDE.md  FIX_PHOENIX_CV_IMPORT.md  INTEGRATION_ECOSYSTEME_COMPLETE.md  IRIS_SECURITY_AUDIT_REPORT.md  LICENSE  Makefile  PHASE_3_AUDIT_COMPLET.md  PHOENIX_DEPLOYMENT_ROADMAP.md  PHOENIX_FINAL_DEPLOYMENT_VALIDATION.md  PHOENIX_SECURITY_AUDIT_2025.md  PHOENIX_UI_AUDIT_REPORT.md  PROJET_COMPLET.md  RAILWAY.md  README.md  README_DOCKER.md  README_TUNNEL.md  REPORT_GLOBAL_CLEANUP.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_CVE_2024_47874.md  SECURITY_PATCH_REPORT.md  SUPABASE_PRODUCTION_COMPLETE_GUIDE.md  SUPABASE_SCHEMAS_COMPLETE_GUIDE.md  app.py  bilan_global_30.09.pages  claude.md  codex_audit.yaml  (+45 more)
apps/phoenix-aube/: Dockerfile  Procfile  README.md  main.py  pyproject.toml  requirements.txt  run_app.py  start.sh  start_full_stack.sh  streamlit_app.py  streamlit_main.py
apps/phoenix-aube/.streamlit/: config.toml
apps/phoenix-aube/docs/: EVENT_STORE_INTEGRATION.md  TRANSPARENCY_ENGINE.md
apps/phoenix-aube/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
apps/phoenix-aube/frontend/src/: App.tsx
apps/phoenix-aube/phoenix_aube/: __init__.py
apps/phoenix-aube/phoenix_aube/api/: __init__.py  dependencies.py  main.py  schemas.py
apps/phoenix-aube/phoenix_aube/core/: __init__.py  event_store_integration.py  events.py  models.py  transparency_engine.py
apps/phoenix-aube/phoenix_aube/services/: __init__.py  data_providers.py  ia_validator.py
apps/phoenix-aube/phoenix_aube/tests/: test_data_providers.py
apps/phoenix-aube/phoenix_aube/ui/: __init__.py  components.py  guided_flow.py  main.py  trust_by_design_app.py
apps/phoenix-aube/phoenix_aube/utils/: __init__.py  mock_providers.py
apps/phoenix-aube/ui/: requirements.txt  streamlit_app.py
apps/phoenix-cv/: .env.example  .gitignore  .snyk  AUDIT_PHOENIX_CV.md  Dockerfile  GUIDE_DEPLOYMENT_STRIPE.md  LICENSE  PHOENIX_ECOSYSTEM_INTEGRATION_PLAN.md  PHOENIX_UNIFIED_AUTH_INTEGRATION.md  PYPDF_DOS_INTEGRATION_REPORT.md  README.md  REFACTORING_SUCCESS.md  SECURITY_AUDIT_REPORT.md  SECURITY_SETUP.md  app.py  app_original_backup.py  auth_manager.py  fix_imports.py  main.py  main_cv.py  phoenix_cv_complete.py  phoenix_cv_restructuring_plan.md  phoenix_event_bridge.py  pyproject.toml  requirements-dev.txt  requirements-optimized.txt  requirements.txt  security_fixes.py  services.py  start.sh  test_auth_flows.py  test_render.py  ui_components.py  webhook_handler.py
apps/phoenix-cv/.github/workflows/: security.yml
apps/phoenix-cv/config/: constants.py
apps/phoenix-cv/contexte/: phoenix_team_guide.md
apps/phoenix-cv/core/: app_core.py
apps/phoenix-cv/phoenix_cv/: README.md  __init__.py  app.py  launch_cv.py  main.py  models_fallback.py  phoenix_cv_app.py  phoenix_cv_auth_integration.py
apps/phoenix-cv/phoenix_cv/config/: __init__.py  constants.py  security_config.py
apps/phoenix-cv/phoenix_cv_package/: __init__.py  app.py  phoenix_cv_auth_integration.py
apps/phoenix-cv/services/: enhanced_gemini_client.py  mirror_match_engine.py  phoenix_auth_integration.py  phoenix_ecosystem_bridge.py  secure_ats_optimizer.py  secure_cv_parser.py  secure_file_handler.py  secure_gemini_client.py  secure_session_manager.py  secure_template_engine.py  smart_coach.py
apps/phoenix-cv/tests/: conftest.py
apps/phoenix-cv/ui/: create_cv_page.py  display_components.py  home_page.py  pricing_page.py  upload_cv_page.py
apps/phoenix-cv/utils/: html_sanitizer.py  secure_crypto.py  secure_validator.py
apps/phoenix-iris-api/: .gitignore  Dockerfile  Procfile  README.md  app.py  dojo_api.py  dojo_api_optimized.py  local_jwt_manager.py  main.py  nixpacks.toml  prompt_template.py  pyproject.toml  requirements.txt  start_alessio.py
apps/phoenix-iris-api/ai/: alessio_prompt_orchestrator.py  gemini_alessio_engine.py  prompt_generator.py
apps/phoenix-iris-api/event_processing/: emotional_vector_state.py
apps/phoenix-iris-api/interaction/: renaissance_protocol.py
apps/phoenix-iris-api/monitoring/: iris_analytics.py
apps/phoenix-iris-api/security/: ethical_guardian.py  input_security.py  phoenix_auth_standalone.py
apps/phoenix-letters/: .env.example  .gitignore  AUDIT_PRODUCTION_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  PHOENIX_UNIFIED_AUTH_MIGRATION.md  README.md  __init__.py  app.py  app_legacy.py  app_minimal.py  auth_manager.py  docker-compose.yml  hello.py  main.py  phoenix_event_bridge.py  phoenix_letters_auth_integration.py  phoenix_letters_unified_main.py  pyproject.toml  requirements-optimized.txt  requirements.txt  services.py  start.sh  streamlit_app.py  stripe_webhook.py  ui_components.py
apps/phoenix-letters/.streamlit/: config.toml
apps/phoenix-letters/compliance/: rgpd_audit_manager.py
apps/phoenix-letters/config/: settings.py
apps/phoenix-letters/docs/: PHOENIX_GREEN_AI_TECHNICAL_GUIDE.md  SOLIDARITY_ECOLOGICAL_PARTNERSHIPS.md
apps/phoenix-letters/phoenix_letters/: __init__.py  app.py  main.py
apps/phoenix-letters/security/: auth_security_tester.py  security_monitoring.py  security_scanner.py
apps/phoenix-letters/tests/: conftest.py
apps/phoenix-letters/utils/: __init__.py  async_runner.py  monitoring.py  session_cleaner.py
apps/phoenix-rise/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  setup_supabase_schema.py  start.sh  test_evs_simulation.py  webhook_handler.py
apps/phoenix-rise/database/: journal_entries_view.sql
apps/phoenix-rise/frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/phoenix-rise/phoenix_rise/: __init__.py  main.py  phoenix_rise_architecture_guide.md  rise_app.py
apps/phoenix-rise/services/: stripe_service.py
(+635 files in other folders)
