[tool.poetry]
name = "phoenix-eco"
version = "0.1.0"
description = "Phoenix Ecosystem Monorepo"
authors = ["Matthieu Rubia <you@example.com>"]
packages = [{ include = "packages" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.33"
supabase = ">=2.0"
pydantic = ">=2"
httpx = ">=0.27"
stripe = ">=8"
google-generativeai = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # on laisse black gérer les lignes longues

[tool.pytest.ini_options]
pythonpath = ["packages"]
testpaths = ["tests"]
addopts = "-q -ra"