[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix-aube"
version = "1.0.0"
description = "Premier outil européen d'exploration métier + validation IA future-proof"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Claude Phoenix DevSecOps Guardian", email = "contact.phoenixletters@gmail.com" },
]
keywords = [
    "reconversion",
    "IA",
    "métiers",
    "future-proof",
    "exploration-carrière"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    
    # Data & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    
    # Database & Storage
    "supabase>=2.0.0",
    "redis>=5.0.0",
    
    # AI & ML
    "google-generativeai>=0.3.2",
    "openai>=1.0.0",  # Backup AI provider
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    
    # HTTP & Async
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Security & Crypto
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Monitoring & Logging
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.38.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    
    # Testing (dev dependencies)
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Alvarezitooo/phoenix-eco-monorepo"
Documentation = "https://docs.phoenix-aube.com"
Repository = "https://github.com/Alvarezitooo/phoenix-eco-monorepo"
"Bug Tracker" = "https://github.com/Alvarezitooo/phoenix-eco-monorepo/issues"

 

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:function ham\\(\\) is deprecated:DeprecationWarning",
]
pythonpath = ["."]

[tool.pytest.ini_options.ini]
pythonpath = ["."]