# 🚀 Phoenix CV - Configuration Poetry
# Compatible avec l'orchestrateur Poetry du monorepo

[tool.poetry]
name = "phoenix_cv"
version = "1.0.0"
description = "L'application Phoenix CV de l'écosystème Phoenix - Générateur IA de CV optimisés pour reconversions professionnelles"
authors = ["Matthieu Rubia <contact.phoenixletters@gmail.com>"]
packages = [{include = "phoenix_cv"}]

[tool.poetry.scripts]
phoenix-cv = "phoenix_cv.main:main"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
streamlit = "*"
google-generativeai = "*"
tenacity = "*"
python-dotenv = "*"
protobuf = "*"
PyJWT = "*"
requests = "*"
bcrypt = "*"
supabase = "*"
# 📋 Visualisations et analyses Phoenix CV
plotly = ">=5.0.0"      # Utilisé pour graphiques ATS et analytics
pandas = ">=1.5.0"       # Utilisé pour traitement données statistiques  
cryptography = ">=3.4.8" # Utilisé pour chiffrement données Premium
stripe = "*"             # Utilisé pour paiements et webhooks
# 📄 Traitement documents CV
python-docx = "*"  # Utilisé pour parsing fichiers DOCX
PyPDF2 = "*"       # Utilisé pour parsing sécurisé PDF
bleach = "*"       # Utilisé pour sanitization HTML/XSS
# Dépendance locale gérée par l'orchestrateur racine
phoenix_event_bridge = { path = "../../packages/phoenix_event_bridge", develop = true }
phoenix_shared_ui = { path = "../../packages/phoenix_shared_ui", develop = true }
phoenix_shared_auth = { path = "../../packages/phoenix-shared-auth", develop = true }
phoenix_shared_ai = { path = "../../packages/phoenix-shared-ai", develop = true }
pdf_security_patch = { path = "../../packages/pdf-security-patch", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"