[tool.poetry]
name = "phoenix-iris-api"
version = "2.0.0"
description = "Phoenix Iris API - Secured AI Assistant for Phoenix Ecosystem"
authors = ["Phoenix DevSecOps Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Framework web
fastapi = "^0.116"
uvicorn = {extras = ["standard"], version = "^0.35"}
pydantic = "^2.6"
# IA et traitement
google-generativeai = "^0.8.0"
# Sécurité et authentification
pyjwt = "^2.8.0"
bcrypt = "^4.1.0"
# Base de données
supabase = "^2.9.0"
# Monitoring et rate limiting
slowapi = "^0.1.9"
# Utilities
httpx = "^0.27.0"
# Phoenix Shared Packages
phoenix-shared-models = { git = "https://github.com/mattvaness/phoenix-eco-monorepo.git", rev = "main", subdirectory = "packages/phoenix-shared-models" }
phoenix-shared-auth = { git = "https://github.com/mattvaness/phoenix-eco-monorepo.git", rev = "main", subdirectory = "packages/phoenix-shared-auth" }
phoenix-event-bridge = { git = "https://github.com/mattvaness/phoenix-eco-monorepo.git", rev = "main", subdirectory = "packages/phoenix-event-bridge" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
