# 🚀 Phoenix Letters - Configuration Poetry
# Compatible avec l'orchestrateur Poetry du monorepo

[tool.poetry]
name = "phoenix_letters"
version = "1.0.0"
description = "L'application Phoenix Letters de l'écosystème Phoenix - Générateur IA de lettres de motivation pour reconversions professionnelles"
authors = ["Matthieu Rubia <contact.phoenixletters@gmail.com>"]
packages = [{include = "phoenix_letters"}]

[tool.poetry.scripts]
phoenix-letters = "phoenix_letters.main:main"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
streamlit = "*"
google-generativeai = "*"
tenacity = "*"
python-dotenv = "*"
protobuf = "*"
PyJWT = "*"
requests = "*"
bcrypt = "*"
supabase = "*"
plotly = ">=5.0.0"
pandas = ">=1.5.0"
cryptography = ">=3.4.8"
stripe = "*"
# Dépendance locale gérée par l'orchestrateur racine
phoenix_event_bridge = { path = "../../packages/phoenix_event_bridge", develop = true }
phoenix_shared_ui = { path = "../../packages/phoenix_shared_ui", develop = true }
phoenix_shared_auth = { path = "../../packages/phoenix-shared-auth", develop = true }
phoenix_shared_ai = { path = "../../packages/phoenix-shared-ai", develop = true }
pdf_security_patch = { path = "../../packages/pdf-security-patch", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"