# 🚀 Phoenix Rise - Configuration Poetry
# Compatible avec l'orchestrateur Poetry du monorepo

[tool.poetry]
name = "phoenix_rise"
version = "1.0.0"
description = "L'application Phoenix Rise de l'écosystème Phoenix - Coach IA pour bien-être et développement personnel lors des reconversions"
authors = ["Matthieu Rubia <contact.phoenixletters@gmail.com>"]
packages = [{include = "phoenix_rise"}]

[tool.poetry.scripts]
phoenix-rise = "phoenix_rise.main:main"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
streamlit = "*"
google-generativeai = "*"
tenacity = "*"
python-dotenv = "*"
protobuf = "*"
PyJWT = "*"
requests = "*"
bcrypt = "*"
supabase = "*"
# Dépendances spécifiques Phoenix Rise
# 📊 Visualisations spécifiques Phoenix Rise
plotly = ">=5.0.0"  # Utilisé pour dashboard et graphiques émotionnels
pandas = ">=1.5.0"   # Utilisé pour traitement données analytics
cryptography = ">=3.4.8"  # Utilisé pour chiffrement sessions Premium
# ❌ SUPPRIMÉ: matplotlib non utilisé dans phoenix-rise
# matplotlib = "*"
# Dépendance locale gérée par l'orchestrateur racine
phoenix_event_bridge = { path = "../../packages/phoenix_event_bridge", develop = true }
phoenix_shared_ui = { path = "../../packages/phoenix_shared_ui", develop = true }
phoenix_shared_auth = { path = "../../packages/phoenix-shared-auth", develop = true }
phoenix_shared_ai = { path = "../../packages/phoenix-shared-ai", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"